test/typechecker.d/invalid/ass4.souc.bad
n = 5

f(x: Integer): Integer = do
	b: Bool = True
	i = b
	return i
